trustfall_core/test_data/tests/parse_errors/invalid_edge_argument.parse-error.ron
Err(InvalidFieldArgument("Number", "max", {
  "x": "y",
}, Pos(
  line: 3,
  column: 17,
)))
